fixing mobile photo height on mobile

--- a/css/mobile/proj1.css
+++ b/css/mobile/proj1.css
@@ -101,6 +101,6 @@
 @media (max-width: 425px) {
     .proj-1-mobile-photo {
         width: 100%;
-        height: 360px;
+        height: 340px;
     }
 }
